cluster/infra/envoy-system/gateway/manifests/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: config
    namespace: envoy-system

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy
  annotations:
    external-dns.kubernetes.io/target: &hostname envoy.talos.${DOMAIN_NAME}

    gatus.home-operations.com/endpoint: |-
      client:
        dns-resolver: tcp://192.168.0.1:53

spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: '192.168.43.100,2a01:e0a:11a7:a4e7::43:100'
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: config

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same

    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-main-tls

    - name: ssh
      protocol: TCP
      port: 2222
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute
            group: gateway.networking.k8s.io
