cluster/infra/envoy-system/gateway/manifests/policy-robot.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: robots-txt
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-system
      sectionName: https

  hostnames: [ '${DOMAIN_NAME}' ]

  rules:
    - matches: [ { path: { type: Exact, value: /robots.txt } } ]
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Cache-Control
                value: public, max-age=600
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: robots-txt-filter

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: block-user-agent
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-system
      sectionName: https

  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            remove: [ 'Server', 'X-Powered-By', 'X-AspNet-Version', 'X-AspNetMvc-Version' ]
            set:
              - name: Strict-Transport-Security
                value: max-age=31449600; includeSubDomains; preload

    - matches:
        - headers:
            - name: User-Agent
              type: RegularExpression
              value:
                '.*AddSearchBot.*|.*AI2Bot.*|.*AI2Bot-DeepResearchEval.*|.*Ai2Bot-Dolma.*|.*aiHitBot.*|.*amazon-kendra.*|.*Amazonbot.*|.*AmazonBuyForMe.*|.*Andibot.*|.*Anomura.*|.*anthropic-ai.*|.*Applebot.*|.*Applebot-Extended.*|.*atlassian-bot.*|.*Awario.*|.*bedrockbot.*|.*bigsur.ai.*|.*Bravebot.*|.*Brightbot 1.0.*|.*BuddyBot.*|.*Bytespider.*|.*CCBot.*|.*Channel3Bot.*|.*ChatGLM-Spider.*|.*ChatGPT Agent.*|.*ChatGPT-User.*|.*Claude-SearchBot.*|.*Claude-User.*|.*Claude-Web.*|.*ClaudeBot.*|.*Cloud [...]
                # how to get the above from Neovim:
                # curl -vL 'https://raw.githubusercontent.com/ai-robots-txt/ai.robots.txt/refs/heads/main/robots.txt' | nvim
                # first half:
                # :%s/\nUser-agent:/,/g
              # second half:
              # :%s/, /*, \~*/g

      filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 301
            hostname: www.google.com
            port: 443
            path:
              type: ReplaceFullPath
              replaceFullPath: '/'
