cluster/infra/envoy-system/gateway/manifests/policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy-all
spec:
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway

  compressor:
    - type: Brotli
      brotli: { }
    - type: Gzip
      gzip: { }
    - type: Zstd
      zstd: { }

  retry:
    numRetries: 2
    retryOn:
      triggers:
        - reset-before-request

  tcpKeepalive: { }

  timeout:
    http:
      connectionIdleTimeout: 30s
      requestTimeout: 0s
